Windows build failure (j2pcsc.dll : fatal error unresolved external symbol throwByName)

XMLWordPrintable

        Windows build failure, after JDK-8030114

        ------------------------------ snippet ------------------------------------------------
        windows_x64_6.1-product (details from log file)
        /net/prt-archiver.us.oracle.com/data/jprt/archive/2014/04/2014-04-02-181406.ssteuck.dev-pit/logs/windows_x64_6.1-product.log
        http://prt-web.us.oracle.com//archive/2014/04/2014-04-02-181406.ssteuck.dev-pit//logs/windows_x64_6.1-product.log
        /cygdrive/c/cygwin/bin/touch /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/bin/jli.dll
           Creating library c:/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libwindowsaccessbridge-64/WindowsAccessBridge-64.lib and object c:/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libwindowsaccessbridge-64/WindowsAccessBridge-64.exp
        /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/fixpath.exe -c /cygdrive/c/progra~2/micros~2.0/vc/bin/amd64/link -nologo -opt:ref -incremental:no -debug -dll -libpath:/cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/lib "-pdb:/cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libj2pcsc/j2pcsc.pdb" "-map:/cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libj2pcsc/j2pcsc.map" "-implib:/cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libj2pcsc/j2pcsc.lib" -out:/cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/bin/j2pcsc.dll /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libj2pcsc/pcsc.obj /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libj2pcsc/pcsc_md.obj /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libj2pcsc/j2pcsc.dll.res winscard.lib
        /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/fixpath.exe -c /cygdrive/c/progra~2/micros~2.0/vc/bin/amd64/link -nologo -opt:ref -incremental:no -debug -dll -libpath:/cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/lib "-pdb:/cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libkrb5/w2k_lsa_auth.pdb" "-map:/cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libkrb5/w2k_lsa_auth.map" "-implib:/cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libkrb5/w2k_lsa_auth.lib" -out:/cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/bin/w2k_lsa_auth.dll /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libkrb5/NativeCreds.obj /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libkrb5/WindowsDirectory.obj /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libkrb5/w2k_lsa_auth.dll.res advapi32.lib Secur32.lib netapi32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib wsock32.lib
           Creating library c:/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libj2pcsc/j2pcsc.lib and object c:/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libj2pcsc/j2pcsc.exp
        /cygdrive/c/cygwin/bin/touch /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/bin/npt.dll
        pcsc.obj : error LNK2019: unresolved external symbol throwByName referenced in function throwOutOfMemoryError
        c:/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/bin/j2pcsc.dll : fatal error LNK1120: 1 unresolved externals
        /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/fixpath.exe -c /cygdrive/c/progra~2/micros~2.0/vc/bin/amd64/link -nologo -opt:ref -incremental:no -debug -dll -libpath:/cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/lib "-pdb:/cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libsunmscapi/sunmscapi.pdb" "-map:/cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libsunmscapi/sunmscapi.map" "-implib:/cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libsunmscapi/sunmscapi.lib" -out:/cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/bin/sunmscapi.dll /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libsunmscapi/security.obj /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libsunmscapi/sunmscapi.dll.res Crypt32.Lib advapi32.lib
        /cygdrive/c/cygwin/bin/touch /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/bin/JavaAccessBridge-64.dll
           Creating library c:/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libkrb5/w2k_lsa_auth.lib and object c:/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libkrb5/w2k_lsa_auth.exp
        make[2]: *** [/cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/bin/j2pcsc.dll] Error 96
        make[2]: *** Waiting for unfinished jobs....
           Creating library c:/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libsunmscapi/sunmscapi.lib and object c:/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libsunmscapi/sunmscapi.exp
        /cygdrive/c/cygwin/bin/touch /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/bin/WindowsAccessBridge-64.dll
        /cygdrive/c/cygwin/bin/touch /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/bin/w2k_lsa_auth.dll
        /cygdrive/c/cygwin/bin/touch /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/bin/sunmscapi.dll
        mlib_ImageAffineEdge.c
        /cygdrive/c/cygwin/bin/rm -f /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libmlib_image/mlib_ImageAffineEdge.d.exitvalue
        (/cygdrive/c/cygwin/bin/echo /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libmlib_image/mlib_ImageAffineEdge.obj: \\ && /cygdrive/c/cygwin/bin/sed -e '/^Note: including file:/!d' -e 's|Note: including file: *||' -e 's|\\|/|g' -e 's|^\([a-zA-Z]\):|/cygdrive/\1|g' -e '/\/cygdrive\/c\/jprt\/T\/P1\/181406.ssteuck\/s/!d' -e 's|$| \\|g' /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libmlib_image/mlib_ImageAffineEdge.d.raw) > /cygdrive/c/jprt/T/P1/181406.ssteuck/s/build/windows-x86_64-normal-server-release/jdk/objs/libmlib_image/mlib_ImageAffineEdge.d
        make[2]: Leaving directory `/cygdrive/c/jprt/T/P1/181406.ssteuck/s/jdk/make'
        make[1]: *** [libs-only] Error 2
        make[1]: Leaving directory `/cygdrive/c/jprt/T/P1/181406.ssteuck/s/jdk/make'
        make: *** [jdk-only] Error 2

              Assignee:
              Chris Hegarty
              Reporter:
              Chris Hegarty
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: