8039118: Windows build failure (j2pcsc.dll : fatal error unresolved external symbol throwByName)

Reviewed-by: mullan, mchung, alanb